# SkySniper

./: LICENSE  README.md  dev.ipynb  pyproject.toml
skysniper/: __init__.py  __main__.py  skysniper.py
skysniper/scrapers/: __init__.py  alibaba.py  ataair.py  base.py  mrbilit.py
tests/: __init__.py  conftest.py  test_alibaba.py  test_ataair.py  test_base.py  test_cli.py  test_mrbilit.py  test_scrapers_registry.py
